# learn_audio_video

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: module.cmake  module_vcpkg.cmake  vcpkg.json
src/: CMakeLists.txt
src/base/aac/: CMakeLists.txt  aac.cpp  aac.h  main.cpp
src/base/flv/: CMakeLists.txt  flv.cpp  flv.h  main.cpp
src/base/h264/: CMakeLists.txt  h264.cpp  h264.h  main.cpp
src/base/pcm/: CMakeLists.txt  main.cpp  pcm.cpp  pcm.h
src/base/rgb/: CMakeLists.txt  main.cpp  rgb.cpp  rgb.h
src/base/yuv/: CMakeLists.txt  main.cpp  yuv.cpp  yuv.h
src/player/ffplayer/: CMakeLists.txt  main.cpp  output_audio.cpp  output_audio.h  output_video.cpp  output_video.h  queue_av_frame.cpp  queue_av_frame.h  queue_av_packet.cpp  queue_av_packet.h  queue_safe.hpp  sdl_player.cpp  sdl_player.h  sync_clock.hpp  thread_decode.cpp  thread_decode.h  thread_demux.cpp  thread_demux.h  thread_safe.cpp  thread_safe.h  video_player.cpp  video_player.h
src/sdl2/: CMakeLists.txt
src/sdl2/01hello_sdl/: CMakeLists.txt  main.cpp
src/sdl2/02show_image/: CMakeLists.txt  main.cpp
src/sdl2/03handle_event/: CMakeLists.txt  main.cpp
src/sdl2/04handle_key/: CMakeLists.txt  main.cpp
src/sdl2/05stretch/: CMakeLists.txt  main.cpp
src/sdl2/06extension_library/: CMakeLists.txt  main.cpp
src/sdl2/07texture/: CMakeLists.txt  main.cpp
src/sdl2/08geometry_render/: CMakeLists.txt  main.cpp
src/sdl2/09viewport/: CMakeLists.txt  main.cpp
src/sdl2/10color_keying/: CMakeLists.txt  main.cpp
src/sdl2/11clip_render/: CMakeLists.txt  main.cpp
src/sdl2/12color_modulation/: CMakeLists.txt  main.cpp
src/sdl2/13alpha_blend/: CMakeLists.txt  main.cpp
src/sdl2/14animated_sprites/: CMakeLists.txt  main.cpp
src/sdl2/15rotation_flipping/: CMakeLists.txt  main.cpp
src/sdl2/16fonts/: CMakeLists.txt  main.cpp
src/sdl2/17mouse_events/: CMakeLists.txt  main.cpp
src/sdl2/18key_states/: CMakeLists.txt  main.cpp
src/sdl2/21sound_music/: CMakeLists.txt  main.cpp
src/sdl2/22timing/: CMakeLists.txt  main.cpp
src/sdl2/23advance_timer/: CMakeLists.txt  main.cpp
src/sdl2/24calculate_framerate/: CMakeLists.txt  main.cpp
src/sdl2/25motion/: CMakeLists.txt  main.cpp
src/tools/h264_analyzer/: CMakeLists.txt
