add_subdirectory(01hello_sdl)
add_subdirectory(02show_image)
add_subdirectory(03handle_event)
add_subdirectory(04handle_key)
add_subdirectory(05stretch)
add_subdirectory(06extension_library)
add_subdirectory(07texture)
add_subdirectory(08geometry_render)
add_subdirectory(09viewport)
add_subdirectory(10color_keying)
add_subdirectory(11clip_render)
add_subdirectory(12color_modulation)